[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/Game.gd" type="Script" id=1]

[node name="Game" type="Node"]

script = ExtResource( 1 )

[node name="World" type="Node" parent="." index="0"]

[node name="Blocks" type="Node" parent="World" index="0"]

[node name="PixelImage" type="Node" parent="World" index="1" groups=[
"pixelImageGR",
]]

[node name="Wrong" type="Node" parent="World" index="2"]

[node name="Banner" type="Node" parent="World" index="3"]

[node name="NoTiles" type="Node" parent="World" index="4"]

[node name="LifeLabel" type="Label" parent="World" index="5"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 74.0
margin_top = 74.0
margin_right = 114.0
margin_bottom = 88.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
text = "Lives: 3"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


